--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,8 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildConfigField("String", "API_KEY", apikeyProperties['API_KEY'])
+        buildConfigField("String", "API_KEY", "\"${apikeyProperties['API_KEY']}\"")
+
     }
 
     buildTypes {
